--- a/style.css
+++ b/style.css
@@ -206,3 +206,22 @@ div:where(.swal2-container) div:where(.swal2-popup) {
 div:where(.swal2-container).swal2-center > .swal2-popup {
   align-self: start !important;
 }
+@media only screen and (max-width: 600px) {
+  .title {
+    font-size: 24px;
+  }
+  .nametext, .secret, .nav-link, .btn, .guess, .msg {
+    font-size: 16px;
+  }
+  .nameplayer {
+    width: 250px;
+  }
+}
+
+
+@media only screen and (max-width: 768px) {
+  .title {
+    font-size: 28px;
+  }
+
+}
